force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/QTB_Billing_Account_Core_to_AnZ__e.object-meta.xml
<CustomObject>
    <label>Billing Account Core to AnZ</label>
    <pluralLabel>Billing Account Core to AnZs</pluralLabel>
</CustomObject>