force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Account__c</fullName>
    <label>Company Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>