force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Account_Id_del__c.field-meta.xml
<CustomField>
    <fullName>QTB_Account_Id_del__c</fullName>
    <label>Account Id Del</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>