force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Address_1__c.field-meta.xml
<CustomField>
    <fullName>QTB_Address_1__c</fullName>
    <label>Address 1</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>