force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_City__c.field-meta.xml
<CustomField>
    <fullName>QTB_City__c</fullName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>