force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Company_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>QTB_Company_Legal_Name__c</fullName>
    <label>Company Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>