force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Core_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>QTB_Core_Account_Id__c</fullName>
    <description>Core Account Id that is sent to the ANZ org upon Billing Account creation</description>
    <label>Core Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>