force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>QTB_CurrencyIsoCode__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>