force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_GFS_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_GFS_Account__c</fullName>
    <label>GFS Account</label>
    <length>8</length>
    <type>Text</type>
</CustomField>