force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_IM_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>QTB_IM_Line_of_Business__c</fullName>
    <label>IM Line of Business</label>
    <length>20</length>
    <type>Text</type>
</CustomField>