force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>QTB_Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <length>30</length>
    <type>Text</type>
</CustomField>