force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>QTB_Original_Opportunity__c</fullName>
    <label>Original Opportunity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>