force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Parent_Account_Id_Del__c.field-meta.xml
<CustomField>
    <fullName>QTB_Parent_Account_Id_Del__c</fullName>
    <label>Parent Account Id Del</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>