force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>