force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_SETID__c.field-meta.xml
<CustomField>
    <fullName>QTB_SETID__c</fullName>
    <label>SETID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>