force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_State_Province__c.field-meta.xml
<CustomField>
    <fullName>QTB_State_Province__c</fullName>
    <label>State/Province</label>
    <length>30</length>
    <type>Text</type>
</CustomField>