force-app/main/default/objects/QTB_Billing_Account_Core_to_AnZ__e/fields/QTB_Status__c.field-meta.xml
<CustomField>
    <fullName>QTB_Status__c</fullName>
    <description>Git lab #32692 - As part of Mulesoft integration</description>
    <label>Status</label>
    <length>12</length>
    <type>Text</type>
</CustomField>